Bug 93066 - Don't use FindCharInSet when searching for only one character. r=sspitzer, sr=alecf